crates/compiler/tests/parse_errors/no_tabs.txt
-- NO TABS -------------------------------------------------------- src/Main.elm

I ran into a tab, but tabs are not allowed in Elm files.

3| x =	1
      ^
Replace the tab with spaces.

